--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,27 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Interview Reminder
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+  <button ion-button (click)="addNote()">Add Note</button>
+
+  <!--display option selecter-->
+<!--  <ion-item>
+    <ion-label>Gender</ion-label>
+    <ion-select [(ngModel)]="gender">
+      <ion-option value="f">Female</ion-option>
+      <ion-option value="m">Male</ion-option>
+    </ion-select>
+  </ion-item>-->
+  <ion-list>
+    <ion-item-divider *ngFor="let interviewOverview of interviewOverviewList;"  color="dark" (click)="openInterviewModal(interviewOverview)">
+      {{interviewOverview.companyName}}
+    </ion-item-divider>
+  </ion-list>
+
 </ion-content>
