--- a/src/pages/note-modal/note-modal.html
+++ b/src/pages/note-modal/note-modal.html
@@ -12,6 +12,11 @@
 <ion-content padding>
   <ion-list>
     <ion-item>
+      <ion-label>Interview Date</ion-label>
+      <ion-datetime displayFormat="DD/MM/YYYY" [(ngModel)]="interviewOverview.interviewDate"></ion-datetime>
+    </ion-item>
+
+    <ion-item>
       <ion-label color="primary" stacked>Company Name</ion-label>
       <ion-input type="text" [(ngModel)]="interviewOverview.companyName" placeholder="Company Name"></ion-input>
     </ion-item>
@@ -23,6 +28,11 @@
     </ion-item>
     <button ion-button color="primary" full (click)="addInterviewer()"><ion-icon  name="add" ></ion-icon></button>
     <button ion-button color="primary" full (click)="removeInterviewer()"><ion-icon  name="remove" ></ion-icon></button>
+
+    <ion-item>
+      <ion-label>Expected Response Day</ion-label>
+      <ion-datetime displayFormat="DD/MM/YYYY" [(ngModel)]="interviewOverview.interviewResponseDate"></ion-datetime>
+    </ion-item>
 
     <ion-item>
       <ion-label color="primary" stacked>Notes</ion-label>
